# pinot

./: README.md  pinot.cabal  stack.yaml
data/: stupid.json  test.ipynb
src/: Adder.hs  Databricks.hs  Flatten.hs  Formats.hs  Jupyter.hs  Main.hs  Notebook.hs  Pandoc.hs  Utils.hs  Zeppelin.hs
