name:                pinot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pandoc-notebook#readme
license:             BSD3
license-file:        LICENSE
author:              Tilo Wiklund
maintainer:          tilo@wiklund.co
copyright:           2017 Tilo Wiklun
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pinot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson, base >= 4.7 && < 5, bytestring, containers, data-default, directory, filepath, lens, optparse-applicative, pandoc, pandoc-types, path, path-io, text, unordered-containers, uuid, vector, zip-archive
  other-modules:       Databricks, Notebook, Pandoc, Utils, Zeppelin

executable dbcflatten
  hs-source-dirs:      src
  main-is:             Flatten.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson, base >= 4.7 && < 5, bytestring, lens, managed, optparse-applicative, system-filepath, text, turtle, unordered-containers, vector, yaml, data-default, pandoc, pandoc-types, containers, uuid, filepath, directory, zip-archive
  default-language:    Haskell2010
